--- a/templates/admin/banner.html.twig
+++ b/templates/admin/banner.html.twig
@@ -1,13 +1,13 @@
 <!-- DEBUT Driver Controller TEMPLATES banner -->
-<section id="driverspresentation--banner" style="background-image:url({{ asset(sImgPath ~'banner/mike-hailwood.jpg') }});">
+<section class="driverspresentation--banner" id="banner" style="background-image:url({{ asset(sImgPath ~'banner/mike-hailwood.jpg') }});">
     <H1>ADMINISTRATION</H1>
 
     <!-- internal page menu, to navigate to ID -->
     <div id="nav--inpage">
-        <a class="btn nav--inpage-btn-bgb" href="{{ path('flatrate_read') }}">Les tarifs</a>
-        <a class="btn nav--inpage-btn-bgb" href="#section--users">Les utilisateurs</a>
-        <a class="btn nav--inpage-btn-bgb" href="#section--customers">Les clients</a>
-        <a class="btn nav--inpage-btn-bgb" href="#section--drivers">Les pilotes</a>
+        <a class="btn nav--btn--blue" href="{{ path('flatrate_read') }}">Les tarifs</a>
+        <a class="btn nav--btn--blue" href="#section--users">Les utilisateurs</a>
+        <a class="btn nav--btn--blue" href="#section--customers">Les clients</a>
+        <a class="btn nav--btn--blue" href="#section--drivers">Les pilotes</a>
     </div>
     
 </section>
