--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -1,7 +1,7 @@
 
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello DriverController!{% endblock %}
+{% block title %}Hello Administrateur !{% endblock %}
 
 {% block body %}
 
