--- a/templates/profile/changepwd.html.twig
+++ b/templates/profile/changepwd.html.twig
@@ -35,7 +35,7 @@
 		<br>
 		<div class="btns--row">
 			<button class="btn btn-sm btn--blue" type="submit">Soumettre</button>
-			<a class="btn btn-sm btn-secondary" href="{{ path('profile_user',{'id': app.user.id}) }}">Annuler</a>
+			<a class="btn btn-sm btn--secondary" href="{{ path('profile_user',{'id': app.user.id}) }}">Annuler</a>
 		</div>
 		{{ form_end(changePwdForm) }}
     </form>
