--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,14 +21,14 @@
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
         <!-- LINK nécessaire pour bénéficier de la balise I, de CDN Font Awesome -->
-        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-
+        <!-- <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/> -->
     </head>
+
     <body>
         <!-- {# ["ROLE_ADMIN"] #} -->
-        <header id="header--header">
+        <header id="section--header">
             {% if app.user %}
-            <div class="align-self-end mt-2 mr-3">
+            <div class="align-self-end mt-1 mr-3">
                 <b>Bonjour et bienvenue {{ app.user.firstname }}</b>
             </div>
             {% endif %}
@@ -36,68 +36,68 @@
             <div class="container--nav">
                 <!-- DEBUT Logo & Marque -->
                 <div id="nav--brand">
-                    <a href="{{ path('homepage') }}"><img class="nav--logo ml-3" src="{{ asset(sFaviconFullname) }}" alt="logo annuaire moto-taxi"></img></a>
+                    <a href="{{ path('homepage') }}"><img class="nav--logo" src="{{ asset(sFaviconFullname) }}" alt="logo annuaire moto-taxi"></img></a>
                     <div class="nav--words">
-                        <h2 class="nav--words-h2 m-2">2Wheels4Motion:</h2>
-                        <h4 class="nav--words-h4 m-2">"Les transferts qui (r)assurent"</h4>
+                        <h4>2Wheels4Motion:</h4>
+                        <h5 class="ml-2">"Les transferts qui (r)assurent"</h5>
                     </div>
                 </div>
                 <!-- DEBUT Menu de navigation -->
                 <div class="nav--bar navbar navbar-expand-lg navbar-light"><!--  bg-dark"> -->
                     <!-- DEBUT bouton "Burger" -->
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="navbar-toggler-icon">-</span>
+                    <button class="navbar-toggler" type="button" title="BurgerButton" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="navbar-toggler-icon"></span>
                     </button>
                     <!-- FIN bouton "Burger" -->
                     <div class="collapse navbar-collapse nav--menu">
+                        <!-- Menus 'permanents' -->
                         <ul class="navbar-nav">
                             <li class="nav-item dropdown">
-                                <a class="nav-link" href="{{ path('homepage') }}">Le Taxi-moto</a>
+                                <a class="nav-link" href="{{ path('homepage') }}">
+                                    Le Taxi-moto
+                                </a>
                             </li>
-                            <!-- <li class="nav-item dropdown">
-                                Confort & sécurité
-                            </li> -->
-                            <li class="nav-item dropdown">
-                                <a class="nav-link" href="">Tarification/Paiement</a>
-                            </li>
-                            <!-- <li class="nav-item dropdown">
-                                <a class="nav-link" href=""><i class="fas fa-motorcycle"></i>&nbsp;Commander une course</a>
-                            </li> -->
                             <li class="nav-item dropdown">
                                 <a class="nav-link" href="{{ path('driver_presentation') }}">
                                     Les pilotes
                                 </a>
                             </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link" href="{{ path('flatrate_index') }}">
+                                    Tarification/Paiement
+                                </a>
+                            </li>
                         </ul>
+                        <!-- * Menus 'contextuels' * -->
                         {# Si l'utilisateur EST DEJA identifié #}
+                        <!-- Menus 'contextuels' -->
                         {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                         <!-- {#{% if app.user %}#} -->
                         <ul class="navbar-nav ml-0">
+                            <!-- page(s) profil utilisateur -->
                             <li class="nav-item">
-
-                                <!-- <a class="nav-link" href="{#{{ path('profile_user') }}#}"> -->
                                 <a class="nav-link" href="{{ path('profile_user', {'id': app.user.id}) }}">
-                                    
                                     <i class="ri-profile-line"></i>
-                                    <!-- &nbsp; -->
                                     {{ app.user.firstname }} {{ app.user.lastname }}
                                 </a>
                             </li>
+                            <!-- page(s) profil administrateur -->
                             {% if is_granted("ROLE_ADMIN") %}
-                            <li class="nav-item "><!--dropdown">
-                                <a class="nav-link dropdown-toggle" href="{{ path('profile_user', {'id': app.user.id}) }}" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <li class="nav-item ">
+                                <!--dropdown">
+                                <a class="nav-link dropdown-toggle" href="{{ path('profile_user', {'id': app.user.id}) }}" id="navbarDropdown" role="button" data-toggle="dropdown">
                                 -->
                                 <a class="nav-link" href="{{ path('admin_index') }}">
                                     <i class="ri-admin-line"></i>
-                                    <!-- &nbsp; -->
                                     Administration
                                 </a>
-                                <!-- <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <!-- <div class="dropdown-menu">
                                     <a class="dropdown-item" href="{#{{ path('...') }}#}">...</a>
                                     <a class="dropdown-item" href="{#{{ path('...') }}#}">...</a>
                                 </div> -->
                             </li>
                             {% endif %}
+                            <!-- Lien de déconnexion -->
                             <li class="nav-item">
                                 <a class="nav-link" href="{{ path('app_logout') }}">
                                     <i class="ri-logout-circle-r-line"></i>
@@ -107,7 +107,7 @@
                                 <!-- <a class="nav-link" href="{#{{ path('app_logout') }}#}">Déconnexion</a> -->
                             </li>
                         </ul>
-                        {# Si l'utilisateur N'est PAS encore identifié #}
+                        <!-- Si l'utilisateur N'est PAS encore identifié -->
                         {% else %}
                         <ul class="navbar-nav ml-0">
                             <li class="nav-item">
@@ -132,10 +132,11 @@
         
         {% endblock %}
 
+
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
 
-        <div id="uptotop"><a href="#"><i class="ri-arrow-up-line"></i></a></div>
+        <div id="uptotop"><a href="#section--header" title="title"><i class="ri-arrow-up-line"></i></a></div>
     </body>
 </html>
