--- a/templates/driver/banner.html.twig
+++ b/templates/driver/banner.html.twig
@@ -1,8 +1,9 @@
 <!-- DEBUT Driver Controller TEMPLATES banner -->
-<section id="driverspresentation--banner" style="background-image:url({{ asset(sImgPath ~'banner/pilotes-motogp-2020.png') }});">
+<section class="driverspresentation--banner" id="banner" style="background-image:url({{ asset(sImgPath ~'banner/pilotes-motogp-2020.png') }});">
     <H1>LE PADDOCK</H1>
     
-    <a class="btn btn--ordering" href="#services">
+    <a class="btn btn--ordering" href="{{ path('claim_index') }}"
+    style="bottom:50px;">
         <i class="fas fa-motorcycle"></i>
         &nbsp;
         Commander une course
