--- a/templates/flatrate/_form.html.twig
+++ b/templates/flatrate/_form.html.twig
@@ -1,59 +1,80 @@
+{% set depts=getdepartments() %}
 <section class="paragraph--large" id="section--presentation">
-    <h2 class="title--h2" id="services--title">Mise à jour d'un tarif...</h2>
-    
+
+    <div class="d-flex flex-row flex-wrap justify-content-between align-items-center">
+        <h2 class="title--h2" id="flatrates--title">Mise à jour d'un tarif...</h2>
+        <div class="d-flex flex-row flex-wrap justify-content-between align-items-center">
+            <a class="btn btn-sm btn--secondary" href="{{ path('flatrate_read') }}">
+                <i class="ri-file-list-3-line"></i>
+                Retour à la liste
+            </a>
+            &emsp;
+            {% if flatrate %}
+                {{ include('flatrate/_delete_form.html.twig') }}
+            {% endif %}
+        </div>
+    </div>
+
         <table class="table table-striped table--txtlight">
             <thead class="thead--light">
                 <tr>
-                    <th style="width:5%;"></th>
-                    <th><label class="required">Libellé</label></th>
-                    <th><label class="required">Prix</label></th>
-                    <th>Prise en charge incluse (forfait)</th>
-                    <th>Actions
-                        &nbsp;
-                        <a class="btn btn-sm btn-secondary" href="{{ path('flatrate_read') }}">
-                            <i class="ri-file-list-3-line"></i>
-                            Retour à la liste
-                        </a>
-                    </th>
-                    {% if flatrate %}
-                        <th style="width:12%;"></th>
-                    {% endif %}
+                    <th style="width:1%;"></th>
+                    <th style="width:30%;"><label class="required">Libellé</label></th>
+                    <th style="width:10%;"><label class="required">Prix</label></th>
+                    <th style="width:15%;"><label>Forfait (* PCI)</label></th>
+                    <th style="width:25%;"><label>Département</label></th>
+                    <th style="width:15%;"><label></label>Actions</label></th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <form class="mt-4 mb-4" id="update" method="post">
                         <td></td>
-                        <td width="20%"><input type="text" value="{% if flatrate %}{{ flatrate.label }}{% endif %}" name="label" size="50" required/></td>
-                        <td><input type="text" value="{% if flatrate %}{{ flatrate.price }}{% endif %}" name="price" size="5" required/></td>
+                        <td width="20%"><input type="text" class="form-control" value="{% if flatrate %}{{ flatrate.label }}{% endif %}" name="label" size="50" required/></td>
+                        <td><input type="text" class="form-control" value="{% if flatrate %}{{ flatrate.price }}{% endif %}" name="price" size="5" required/></td>
                         <td>
                             <div class="d-flex flex-row">
                                 <div class="col-4"></div>
                                 <div>
                                     <input type="checkbox" name="pickupincluded"
-                                    {% if flatrate and flatrate.pickupincluded %}checked{% endif %}
+                                        {% if flatrate and flatrate.pickupincluded %}checked{% endif %}
                                     />
                                 </div>
                             </div>
                         </td>
-                        <td class="d-flex flex-row">
-                            <button class="btn btn-sm btn--blue" type="submit" title="Sauvegarder" class="mr-2"><!--  form="update"> -->
-                                <i class="ri-save-line"></i>
-                                &nbsp;
-                                Sauvegarder
-                            </button>
+                        <td>
+                            {% if depts is defined and depts is not null %}
+                            <select class="form-control departments" id="claim_form_to_departments"
+                                name="department" title="departments"
+                            >
+                                <option value="" name="all">Tous</option>
+                                {% for dept in depts %}
+                                
+                                <option value="{{ dept.code }}" name="{{ dept.code }}" 
+                                    {% if flatrate is defined and flatrate is not null and flatrate.departmentcode==dept.code %}selected{% endif %}
+                                >
+                                    {{ dept.name~' ('~dept.code~')' }}
+                                </option>
+                                {% endfor %}
+                            </select>
+                            {% endif %}
+                        </td>
+                        <td>
+                            <!-- <div class="d-flex flex-row flex-wrap"> -->
+                                <button class="btn btn-sm btn--blue" type="submit" title="Sauvegarder" class="mr-2"><!--  form="update"> -->
+                                    <i class="ri-save-line"></i>
+                                    Sauvegarder
+                                </button>
+                            <!-- </div> -->
                         </td>
                     </form>
-                    {% if flatrate %}
-                        <td>
-                        {{ include('flatrate/_delete_form.html.twig') }}
-                        </td>
-                    {% endif %}
                 </tr>
             </tbody>
             <tfoot>
                 <tr>
-                    <td colspan="4"></td>
+                    <td colspan="6">
+                        * PCI = Prise en Charge Incluse
+                    </td>
                 </tr>
             </tfoot>
         </table>
