--- a/templates/profile/banner.html.twig
+++ b/templates/profile/banner.html.twig
@@ -1,8 +1,8 @@
 <!-- DEBUT Profile Controller TEMPLATES banner -->
-<section id="profile--banner" style="background-image:url({{ asset(sImgPath ~ 'banner/Profile.png') }});">
+<section class="profile--banner" id="banner" style="background-image:url({{ asset(sImgPath ~ 'banner/Profile.png') }});">
     <H1>TABLEAU DE BORD</H1>
     
-    <a class="btn btn--ordering" href="{#{{ path('') }}#}">
+    <a class="btn btn--ordering" href="{{ path('claim_index') }}">
         <i class="fas fa-motorcycle"></i>
         &nbsp;
         Commander une course
@@ -13,12 +13,12 @@
     <div id="nav--inpage">
         {% if app.user %}
         {#{% if "ROLE_USER" in app.user.roles %}#}
-        <a class="btn nav--inpage-btn-bgb" href="{{ path('profile_user', {'id': app.user.id}) }}">L'utilisateur</a>
+        <a class="btn nav--btn--blue" href="{{ path('profile_user', {'id': app.user.id}) }}">L'utilisateur</a>
         {% endif %}
         <!-- -->
 {% if app.user.customer %}
         {#{% if "ROLE_CUSTOMER" in app.user.roles %}#}
-        <a class="btn nav--inpage-btn-bgb" href="{{ path('profile_customer') }}">Le client</a>
+        <a class="btn nav--btn--blue" href="{{ path('profile_customer') }}">Le client</a>
         {% endif %}
         <div>
             {#{{ dump('app.user : ') }}{{ dump(app.user) }}#}
@@ -27,7 +27,7 @@
         </div>
         {% if app.user.driver %}
         {#{% if "ROLE_DRIVER" in app.user.roles %}#}
-        <a class="btn nav--inpage-btn-bgb" href="{{ path('profile_driver') }}">Le professionnel</a>
+        <a class="btn nav--btn--blue" href="{{ path('profile_driver') }}">Le professionnel</a>
         {% else %}
         {#{% elseif not app.user.driver %}#}
         <a class="btn nav--inpage-btn-important" href="{{ path('registration_driver', {'id': app.user.id}) }}">Créer un compte pilote VMDTR</a>
