--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -15,7 +15,7 @@
     <section class="homepage--banner" id="banner" style="background-image:url({{ asset(sImgPath ~'banner/honda_gl1800_2018_deux_models-750x410.jpg') }});">
         <H1>L'ANNUAIRE DES TAXIS-MOTO DE FRANCE</H1>
         
-        <a class="btn btn--ordering" href="{{ path('claim_index') }}">
+        <a class="btn btn--ordering" href="{{ path('claim_create') }}">
             <i class="fas fa-motorcycle"></i>
             &nbsp;
             Commander une course
