--- a/templates/profile/banner.html.twig
+++ b/templates/profile/banner.html.twig
@@ -2,7 +2,7 @@
 <section class="profile--banner" id="banner" style="background-image:url({{ asset(sImgPath ~ 'banner/Profile.png') }});">
     <H1>TABLEAU DE BORD</H1>
     
-    <a class="btn btn--ordering" href="{{ path('claim_index') }}">
+    <a class="btn btn--ordering" href="{{ path('claim_create') }}">
         <i class="fas fa-motorcycle"></i>
         &nbsp;
         Commander une course
