--- a/templates/registration/driver.html.twig
+++ b/templates/registration/driver.html.twig
@@ -31,7 +31,7 @@
 
 
 <div class="paragraph--large" method="post"> 
-    <h1 class="title--h2">Enregistrez-vous : <small style="color:red;font-size:0.35em;">(* champs obligatoire)</small></h1>
+    <h1 class="title--h2">Enregistrez-vous : <small class="small-title-message">(* champs obligatoire)</small></h1>
     <!-- *** DEBUT de la Carte3D *** -->
     <div class="card--3D-vertical">
 
