--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -23,7 +23,7 @@
 
         <div class="d-flex flex-row justify-content-between w-100">
             <!---->
-            <h1 class="h3 mb-3 font-weight-normal">Identifiez-vous : <small style="color:red;font-size:0.35em;">(* champs obligatoire)</small></h1>
+            <h1 class="h3 mb-3 font-weight-normal">Identifiez-vous : <small class="small-title-message">(* champs obligatoire)</small></h1>
             <!---->
             {% if app.user is null %}
             <div class="d-flex flex-row justify-content-between align-items-center">
