--- a/templates/flatrate/banner.html.twig
+++ b/templates/flatrate/banner.html.twig
@@ -2,7 +2,7 @@
 <section class="flatrate--banner" id="banner" style="background-image:url({{ asset(sImgPath ~ 'banner/flatrate.jpg') }});">
     <H1>TARIFS</H1>
     
-    <a class="btn btn--ordering" href="{{ path('claim_index') }}" style="bottom:25px;">
+    <a class="btn btn--ordering" href="{{ path('claim_create') }}" style="bottom:25px;">
         <i class="fas fa-motorcycle"></i>
         &nbsp;
         Commander une course
